# imagec

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  build_release.ps1  conanfile.py  init_conan.ps1
devel/: image_with_info_widget.cpp  image_with_info_widget.hpp  main.cpp  main_window.cpp  zoomable_image_widget.cpp  zoomable_image_widget.hpp
src/: main.cpp
src/algorithms/: AlgorithmBase.cpp  AlgorithmBase.hpp  IAlgorithm.hpp  brightness.cpp  brightness.hpp  change_name.hpp  contrast.cpp  contrast.hpp  duplicate.cpp  duplicate.hpp  histogram.cpp  histogram.hpp  rotate.cpp  rotate.hpp  save.cpp  save.hpp  split.hpp
src/algorithms/geometric_transforms/: Rotate.cpp  Rotate.hpp  flip.cpp  flip.hpp
src/algorithms/image_modifiers/: ChangeName.cpp  ChangeName.hpp  change_name.cpp  duplicate.cpp  duplicate.hpp  save.cpp  save.hpp  split.cpp  split.hpp
src/algorithms/point_transforms/: brightness.cpp  brightness.hpp  contrast.cpp  contrast.hpp
src/algorithms/statistics/: FilledAreaInfo.cpp  FilledAreaInfo.hpp  histogram.cpp  histogram.hpp
src/core/: image.cpp  image.hpp  image_types.hpp  utils.hpp
src/core/utils/: traits.hpp
src/gui/: AppManagerSingleton.cpp  AppManagerSingleton.hpp  image_dialog.cpp  image_dialog.hpp  image_label.cpp  image_label.hpp  image_with_info_widget.cpp  image_with_info_widget.hpp  main_bar.cpp  main_bar.hpp  parameters_dialog.cpp  parameters_dialog.hpp  zoomable_image_widget.cpp  zoomable_image_widget.hpp
src/gui/gui_old/: image_dialog.hpp  main_bar.cpp  main_bar.hpp  main_window.cpp  main_window.hpp
src/gui/utils/: image.cpp  image.hpp
src/gui/widgets/: ImageWithInfoWidget.cpp  ImageWithInfoWidget.hpp  ZoomableImageWidget.cpp  ZoomableImageWidget.hpp  ZoomableImageWidget.ui
src/gui/windows/: ImageWindow.cpp  ImageWindow.hpp  ImageWindow.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  ParametersDialog.cpp  ParametersDialog.hpp
